--- a/src/components/GetTouch.css
+++ b/src/components/GetTouch.css
@@ -101,6 +101,28 @@
     padding: 20px;
   }
 
+  .arrow {
+    display: none;
+  }
+  
+  .contact-info{
+    display: none;
+  }
+  .contact-form input,
+  .contact-form textarea {
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: none;
+
+    font-size: 16px;
+    width: 97%;
+  }
+  .contact-form h3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .contact-info {
     margin-right: 0;
     margin-bottom: 30px;
